--- a/assets/main.css
+++ b/assets/main.css
@@ -1,32 +1,103 @@
+.teamcolumn>img {
+      overflow: hidden;
+    width: auto;
+    height: 250px;
+}
+
+.teamcolumninner {
+  border-width: 0;
+}
+.wrapper100percent.section2 {
+position: relative;
+
+}
+.faqicon {
+  margin-top: 3px;
+}
+.navbar {
+  z-index: 10000;
+}
+
+ul.socialicons li a:hover {
+  background-color: #e5573c;
+}
+.onelist h4 {
+  font-size: 28px;
+}
+.buyamilesection {
+      padding: 50px 0px;
+}
+#twitter-widget-0 {
+      position: absolute !important;
+    z-index: 1000;
+    right: 0px;
+    height: 103% !important;
+        top: -6px !important;
+        width: 300px !important;
+}
+@media screen and (min-width: 600px) {
+.left {
+      padding-left: 50px;
+    
+    margin-left: initial;
+}
+}
+@media screen and (max-width: 600px) {
+#twitter-widget-0 {
+    visibility: hidden;
+    clear: both;
+    display: none !important;
+  }
+}
+
+.sponsorcolumn>img {
+  width: 100%;
+}
+
+  p, li {
+    font-size: 22px;
+  }
+  h4 {
+        font-weight: 600;
+    font-size: 28px;
+  }
+  h5 {
+    font-size: 26px;
+  }
   .navbar-nav {
     width: 100%;
     text-align: center;
 
   }
+
+  .btn-5 {
+    height: 54px;
+    font-size: 18px;
+  }
+
   .nav {
   /* border-bottom: 1px solid rgb(197, 70, 46);*/
   }
+
   .header-btn {
     padding: 5px 15px; 
     color: white;
   }
+
   .mile, .address i{
        border: 3px solid #c5462e;
   }
-
   .header-btn:hover {
     background-color: #c5462e;
     border-color: white;
   }
+  
 .nav > li:hover {
   color: #cccccc;
 }
 .navbar-nav > li {
      float:  none !important;
     display: inline-block;
-}
-h4 {
-     font-size: 18px;
 }
 .nav > li > a:link, .nav > li > a:visited {
   padding: 20px 12px;
@@ -129,4 +200,13 @@ border-color:  #e5573c;
 .slidertextinner>img {
 	width: 50%;
 }
+}
+.bigmilebutton {
+  width: 30%;
+    height: 100px;
+    padding-top: 35px;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    font-size: 30px;
 }
